Backend funcionando
Los datos de los proyectos vienen de una base de datos de Mongo Atlas creada para este proyecto. Los datos iteran entre una configuración para mongo en el directorio config/, el modelo Tarjeta, el controlador de la app y el propio componente de tarjeta; todo esto finaliza visualmente en el index.html, en el cual se puede ver en cada una de las tarjetas todos los datos de cada proyecto.