@@ -21,8 +21,16 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:3.2.5'
+    implementation 'net.datafaker:datafaker:2.4.3'
     runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
+}
+bootRun {
+    jvmArgs = ['--add-opens', 'java.desktop/java.awt=ALL-UNNAMED']
 }
 
 tasks.withType(JavaCompile) {
